--- a/sara/css/style.css
+++ b/sara/css/style.css
@@ -283,7 +283,7 @@ label {
 input[type="text"],  
 input[type="email"],  
 textarea {
-	margin: 0.5rem 0 1rem 0;
+	margin: 0.5rem 0 1rem 0 !important;
 }
 
 /* Spacings and elemnts ordering */
