--- a/sara/css/style.css
+++ b/sara/css/style.css
@@ -83,7 +83,16 @@ a:hover{
 
 #wrapper {
 	background-color: rgba(53,53,53,1);
-	padding: 1.5rem;
+	padding: 0;
+	background: url('../img/bg-3.jpg') no-repeat center center fixed;
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+.main-content {
+	background-color: rgba(0,0,0,0.25);
 }
 
 section#home, section#edu, section#skills, section#exp, section#contact {
@@ -92,6 +101,7 @@ section#home, section#edu, section#skills, section#exp, section#contact {
 
 #home {
 	padding: 0 1rem;
+	
 }
 
 aside {
@@ -100,13 +110,14 @@ aside {
 	position: fixed !important;
 	right: 0;
 	padding: 0 !important;
-	background-color: rgba(255,255,255,0.1);
+	background-color: rgba(255,255,255,0.2);
 }
 
 	aside > div {
 		height: 20%;
 		border-bottom: solid 1px black;
 		position: relative;
+		transition: background-color 300ms ease-out;
 	}
 
 		aside > div > a {
@@ -169,6 +180,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .intro {
+	background-color: rgba(0,0,0,0.35);
 	margin-top: 2rem;
 	padding: 7%;	
 }
@@ -206,26 +218,44 @@ footer {
 
 .row {
 	max-width: 186.25rem;
-	padding: 0 1rem;
 }
 
 nav {
 	z-index: 999;
     width:100%; 
 }
+
+/*nav > div > div.home a {
+	color: #334D5C;
+}
+
+nav > div > div.edu a {
+	color: #45B29D;
+}
+
+nav > div > div.skills a {
+	color: #EFC94C;
+}
+
+nav > div > div.exp a {
+	color: #E27A3F;
+}
+
+nav > div > div.contact a {
+	color: #DF5A49;
+}*/
 	
 	nav a {
+		color: rgb(0,0,0);
 		font-family: 'Open Sans Condensed', sans-serif; 
 		font-weight: 300; 
 		font-style: normal;
 		-webkit-font-smoothing: antialiased; 
 		text-rendering: optimizeLegibility;
 		font-size: 1.25rem;
-		color: rgb(0,0,0);
-	}
-
-	nav > div {
-		margin: 1.25rem 0;
+		display: block;
+		width: 100%;
+		height: 100%;
 	}
 
 nav.row {
@@ -233,8 +263,7 @@ nav.row {
 }
 
 .content {
-	background-color: rgb(242,242,242);
-	color: rgb(0,0,0);
+	background-color: rgba(242,242,242,0.85);
 }
 
 textarea {
@@ -332,17 +361,20 @@ textarea {
 	text-align: center;
 }
 
-div.menu.center {
+div.menu {
 	z-index: 999;
 	position: fixed; 
     top:0%;
-    width:100%; 
+    width:100%;
 }
 
 input.menuB {
+	position: relative;
 	margin: 0 auto;
 	height: 2.5rem;
 	width: 2.5rem;
+	float: right;
+    margin: 0.5rem 2%; 
 }
 
 #edu .row.collapse, #skills .row.collapse, #exp .row.collapse, #contact .row.collapse {
@@ -350,12 +382,6 @@ input.menuB {
 }
 
 /* Coloring and other stuff */
-
-.sw {
-	position: absolute;
-	top: 5%;
-	left: 0;
-}
 
 .download-container {
 	position: absolute;
@@ -377,6 +403,27 @@ input.menuB {
 
 	.download:hover, .download:focus {
 		background-color: #334D5C;
+		color: rgb(0,0,0);
+	}
+
+.showcase {
+	color: rgb(255,255,255);
+	padding: 1rem 2rem;
+	margin-top: 1.25rem;
+	font-size: 1.5rem;
+	font-family: 'Open Sans Condensed', sans-serif; 
+	font-weight: 300; 
+	font-style: normal;
+	-webkit-font-smoothing: antialiased; 
+	text-rendering: optimizeLegibility;
+	float: right;
+	background-color: transparent;
+	border: solid 1px rgb(255,255,255);
+	transition: background-color 300ms ease-out;
+}
+
+	.showcase:hover, .showcase:focus {
+		background-color: #45B29D;
 	}
 
 .last-title {
@@ -397,6 +444,435 @@ p.success {
 	color: #43AC6A;
 } 
 
+/*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image,
+.fancybox-wrap iframe,
+.fancybox-wrap object,
+.fancybox-nav,
+.fancybox-nav span,
+.fancybox-tmp
+{
+	padding: 0;
+	margin: 0;
+	border: 0;
+	outline: none;
+	vertical-align: top;
+}
+
+.fancybox-wrap {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 8020;
+}
+
+.fancybox-skin {
+	position: relative;
+	background: #f9f9f9;
+	color: #444;
+	text-shadow: none;
+	-webkit-border-radius: 4px;
+	   -moz-border-radius: 4px;
+	        border-radius: 4px;
+}
+
+.fancybox-opened {
+	z-index: 8030;
+}
+
+.fancybox-opened .fancybox-skin {
+	-webkit-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+	   -moz-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+	        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+}
+
+.fancybox-outer, .fancybox-inner {
+	position: relative;
+}
+
+.fancybox-inner {
+	overflow: hidden;
+}
+
+.fancybox-type-iframe .fancybox-inner {
+	-webkit-overflow-scrolling: touch;
+}
+
+.fancybox-error {
+	color: #444;
+	font: 14px/20px "Open Sans", sans-serif;
+	margin: 0;
+	padding: 15px;
+	white-space: nowrap;
+}
+
+.fancybox-image, .fancybox-iframe {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.fancybox-image {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+	background-image: url('../img/fancybox_sprite.png');
+}
+
+#fancybox-loading {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -22px;
+	margin-left: -22px;
+	background-position: 0 -108px;
+	opacity: 0.8;
+	cursor: pointer;
+	z-index: 8060;
+}
+
+#fancybox-loading div {
+	width: 44px;
+	height: 44px;
+	background: url('../img/fancybox_loading.gif') center center no-repeat;
+}
+
+.fancybox-close {
+	position: absolute;
+	top: -18px;
+	right: -18px;
+	width: 36px;
+	height: 36px;
+	cursor: pointer;
+	z-index: 8040;
+}
+
+.fancybox-nav {
+	position: absolute;
+	top: 0;
+	width: 40%;
+	height: 100%;
+	cursor: pointer;
+	text-decoration: none;
+	background: transparent url('../img/blank.gif'); /* helps IE */
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	z-index: 8040;
+}
+
+.fancybox-prev {
+	left: 0;
+}
+
+.fancybox-next {
+	right: 0;
+}
+
+.fancybox-nav span {
+	position: absolute;
+	top: 50%;
+	width: 36px;
+	height: 34px;
+	margin-top: -18px;
+	cursor: pointer;
+	z-index: 8040;
+	visibility: hidden;
+}
+
+.fancybox-prev span {
+	left: 10px;
+	background-position: 0 -36px;
+}
+
+.fancybox-next span {
+	right: 10px;
+	background-position: 0 -72px;
+}
+
+.fancybox-nav:hover span {
+	visibility: visible;
+}
+
+.fancybox-tmp {
+	position: absolute;
+	top: -99999px;
+	left: -99999px;
+	visibility: hidden;
+	max-width: 99999px;
+	max-height: 99999px;
+	overflow: visible !important;
+}
+
+/* Overlay helper */
+
+.fancybox-lock {
+    overflow: hidden !important;
+    width: auto;
+}
+
+.fancybox-lock body {
+    overflow: hidden !important;
+}
+
+.fancybox-lock-test {
+    overflow-y: hidden !important;
+}
+
+.fancybox-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	display: none;
+	z-index: 8010;
+	background: url('../img/fancybox_overlay.png');
+}
+
+.fancybox-overlay-fixed {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+}
+
+.fancybox-lock .fancybox-overlay {
+	overflow: auto;
+	overflow-y: scroll;
+}
+
+/* Title helper */
+
+.fancybox-title {
+	visibility: hidden;
+	font: normal 13px/20px 'Open Sans' ,sans-serif;
+	position: relative;
+	text-shadow: none;
+	z-index: 8050;
+}
+
+.fancybox-opened .fancybox-title {
+	visibility: visible;
+}
+
+.fancybox-title-float-wrap {
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	margin-bottom: -35px;
+	z-index: 8050;
+	text-align: center;
+}
+
+.fancybox-title-float-wrap .child {
+	display: inline-block;
+	margin-right: -100%;
+	padding: 2px 20px;
+	background: transparent; /* Fallback for web browsers that doesn't support RGBa */
+	background: rgba(0, 0, 0, 0.8);
+	-webkit-border-radius: 15px;
+	   -moz-border-radius: 15px;
+	        border-radius: 15px;
+	text-shadow: 0 1px 2px #222;
+	color: #FFF;
+	font-weight: bold;
+	line-height: 24px;
+	white-space: nowrap;
+}
+
+.fancybox-title-outside-wrap {
+	position: relative;
+	margin-top: 10px;
+	color: #fff;
+}
+
+.fancybox-title-inside-wrap {
+	padding-top: 10px;
+}
+
+.fancybox-title-over-wrap {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: #fff;
+	padding: 10px;
+	background: #000;
+	background: rgba(0, 0, 0, .8);
+}
+
+/*Retina graphics!*/
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+	   only screen and (min--moz-device-pixel-ratio: 1.5),
+	   only screen and (min-device-pixel-ratio: 1.5){
+
+	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+		background-image: url('../img/fancybox_sprite@2x.png');
+		background-size: 44px 152px; /*The size of the normal image, half the size of the hi-res image*/
+	}
+
+	#fancybox-loading div {
+		background-image: url('../img/fancybox_loading@2x.gif');
+		background-size: 24px 24px; /*The size of the normal image, half the size of the hi-res image*/
+	}
+}
+
+#fancybox-buttons {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	z-index: 8050;
+}
+
+#fancybox-buttons.top {
+	top: 10px;
+}
+
+#fancybox-buttons.bottom {
+	bottom: 10px;
+}
+
+#fancybox-buttons ul {
+	display: block;
+	width: 166px;
+	height: 30px;
+	margin: 0 auto;
+	padding: 0;
+	list-style: none;
+	border: 1px solid #111;
+	border-radius: 3px;
+	-webkit-box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
+	   -moz-box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
+	        box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
+	background: rgb(50,50,50);
+	background: -moz-linear-gradient(top, rgb(68,68,68) 0%, rgb(52,52,52) 50%, rgb(41,41,41) 50%, rgb(51,51,51) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(68,68,68)), color-stop(50%,rgb(52,52,52)), color-stop(50%,rgb(41,41,41)), color-stop(100%,rgb(51,51,51)));
+	background: -webkit-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
+	background: -o-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
+	background: -ms-linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
+	background: linear-gradient(top, rgb(68,68,68) 0%,rgb(52,52,52) 50%,rgb(41,41,41) 50%,rgb(51,51,51) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#222222',GradientType=0 );
+}
+
+#fancybox-buttons ul li {
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+
+#fancybox-buttons a {
+	display: block;
+	width: 30px;
+	height: 30px;
+	text-indent: -9999px;
+	background-color: transparent;
+	background-image: url('../img/fancybox_buttons.png');
+	background-repeat: no-repeat;
+	outline: none;
+	opacity: 0.8;
+}
+
+#fancybox-buttons a:hover {
+	opacity: 1;
+}
+
+#fancybox-buttons a.btnPrev {
+	background-position: 5px 0;
+}
+
+#fancybox-buttons a.btnNext {
+	background-position: -33px 0;
+	border-right: 1px solid #3e3e3e;
+}
+
+#fancybox-buttons a.btnPlay {
+	background-position: 0 -30px;
+}
+
+#fancybox-buttons a.btnPlayOn {
+	background-position: -30px -30px;
+}
+
+#fancybox-buttons a.btnToggle {
+	background-position: 3px -60px;
+	border-left: 1px solid #111;
+	border-right: 1px solid #3e3e3e;
+	width: 35px
+}
+
+#fancybox-buttons a.btnToggleOn {
+	background-position: -27px -60px;
+}
+
+#fancybox-buttons a.btnClose {
+	border-left: 1px solid #111;
+	width: 35px;
+	background-position: -56px 0px;
+}
+
+#fancybox-buttons a.btnDisabled {
+	opacity : 0.4;
+	cursor: default;
+}
+
+#fancybox-thumbs {
+	position: fixed;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	z-index: 8050;
+}
+
+#fancybox-thumbs.bottom {
+	bottom: 2px;
+}
+
+#fancybox-thumbs.top {
+	top: 2px;
+}
+
+#fancybox-thumbs ul {
+	position: relative;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#fancybox-thumbs ul li {
+	float: left;
+	padding: 1px;
+	opacity: 0.5;
+}
+
+#fancybox-thumbs ul li.active {
+	opacity: 0.75;
+	padding: 0;
+	border: 1px solid #fff;
+}
+
+#fancybox-thumbs ul li:hover {
+	opacity: 1;
+}
+
+#fancybox-thumbs ul li a {
+	display: block;
+	position: relative;
+	overflow: hidden;
+	border: 1px solid #222;
+	background: #111;
+	outline: none;
+}
+
+#fancybox-thumbs ul li img {
+	display: block;
+	position: relative;
+	border: 0;
+	padding: 0;
+	max-width: none;
+}
+
 /* Custom media queries */
 
 @media only screen and (min-width: 64.063em) and (max-width: 90em) { 
@@ -413,21 +889,45 @@ p.success {
 		font-size: 2.5rem;
 	}
 
-	nav a {
-		font-size: 1.125rem;
+}
+
+@media only screen and (min-width: 48em) and (max-width: 64em) {
+	
+	#wrapper {
+		margin-top: 0;
+		padding: 0;
+		background: none;
+		top: 0;
+	    right: 0;
+	    left: 0;
+	    height: 1536px;
+	    background-image: url('../img/bg-tablet.jpg');
+	    background-position: 50% 0;
+	    background-repeat: no-repeat;
+	    z-index: -1;
 	}
 
-	nav > div {
-		margin: 1.5rem 0;
+	.download-container {
+		bottom: 10%;
 	}
 
+	.bg-tablet {
+		/*position: fixed;*/
+	    top: 0;
+	    right: 0;
+	    left: 0;
+	    height: 1536px;
+	    background-image: url('../img/bg-tablet.jpg');
+	    background-position: 50% 0;
+	    background-repeat: no-repeat;
+	    z-index: -1;
+	}
 }
 
 @media only screen and (min-width: 40.125em) and (max-width: 64em) { 
 
 	.intro {
 		top: 50%;
-		width: 60%;
 		height: 30%;
 		padding: 0 0.5rem;
 	}
@@ -438,14 +938,6 @@ p.success {
 
 	.intro h2 {
 		font-size: 1.5rem;
-	}
-
-	nav a {
-		font-size: 1.125rem;
-	}
-
-	nav > div {
-		margin: 1.5rem 0;
 	}
 
 }
@@ -470,14 +962,6 @@ p.success {
 	nav {
 		height: 4rem;
 	}
-	
-	nav a {
-		font-size: 1rem;
-	}
-
-	nav > div {
-		margin: 1.125rem 0;
-	}
 
 	#home {
 		margin-top: 4rem;
@@ -487,12 +971,21 @@ p.success {
 
 @media only screen and (max-width: 40.063em) { 
 	
+	.row .row {
+		margin-right: 0;
+		margin-left: 0;
+	}
+
 	ul li {
 			font-size: 1rem;
 		}
 
 	#exp ul {
 		padding: 0;
+	}
+
+	#exp > .row > div {
+		margin-bottom: 2rem;
 	}
 
 	.download {
@@ -515,24 +1008,47 @@ p.success {
 		margin-top: 0;
 	}
 
-	video {
-		visibility: hidden;
+	.showcase {
+		margin-bottom: 1.25rem;
+		float: none;
 	}
 
 	#wrapper {
 		margin-top: 0;
 		padding: 0;
+		background: none;
+	}
+
+	.bg-mobile {
+		position: fixed;
+	    top: 0;
+	    right: 0;
+	    left: 0;
+	    height: 1472px;
+	    background-image: url('../img/bg-mobile.jpg');
+	    background-position: 50% 0;
+	    background-repeat: no-repeat;
+	    z-index: -1;
 	}
 
 	nav {
 		background-color: rgba(255,255,255,0.95);
 	}
+
+		nav > div > div {
+			border: 1px solid rgba(153,153,153,0.5);
+			padding: 1rem;
+			margin: 0;
+			height: 4rem;
+		}
 	
 	.intro {
 		padding: 0 0.5rem;
 		text-align: left;
-		margin-top: 25%;
+		margin-top: 39%;
 		height: 14rem;
+		position: relative;
+		background-color: rgba(0,0,0,0.55);
 	}
 
 		.intro h1 {
@@ -549,10 +1065,6 @@ p.success {
 
 	h2.title {
 		font-size: 2.5rem;
-	}
-
-	nav > div {
-		margin: 1rem 0;
 	}
 
 	nav {
