--- a/sara/css/style.css
+++ b/sara/css/style.css
@@ -1071,4 +1071,18 @@ p.success {
 	.row.pt32{
 		padding-top:1.5rem;
 	}
+
+	.contact-me {
+		padding: 0 0.25rem;
+	}
+
+	.google-recaptcha {
+		padding-left: 0.5rem;
+		margin-bottom: 1rem;
+	}
+
+	.linkedin {
+		padding-left: 0.25rem;
+		margin-bottom: 1rem;
+	}
 }
