--- a/dperros/css/style.css
+++ b/dperros/css/style.css
@@ -795,15 +795,11 @@ p.success {
 		top: 0;
 	    right: 0;
 	    left: 0;
-	    height: 1536px;
-	    background-image: url('../img/bg-tablet.jpg');
-	    background-position: 50% 0;
-	    background-repeat: no-repeat;
 	    z-index: -1;
 	}
 
 	.bg-tablet {
-		/*position: fixed;*/
+		position: fixed;
 	    top: 0;
 	    right: 0;
 	    left: 0;
