--- a/rodiles-blur-2015/styles.css
+++ b/rodiles-blur-2015/styles.css
@@ -13,17 +13,29 @@ body {
 } */
 
 body {
-    background-image: url(img/bg/background2.jpg);
+    
 }
 
 #bg {
+	background-image: url(img/bg/background.jpg);
     position: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -2;
-    background-size: cover !important;
+    filter: blur(5px) brightness(0.75);
+    -webkit-filter: blur(5px) brightness(0.75);
+    -moz-filter: blur(5px) brightness(0.75);
+    -ms-filter: blur(5px) brightness(0.75);
+    -o-filter: blur(5px) brightness(0.75);
+    -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 #presentation {
