--- a/rodiles-blur-2015/styles.css
+++ b/rodiles-blur-2015/styles.css
@@ -1,10 +1,4 @@
-/*body {
-    background-image: url(img/background@2x.jpg);
-}
-
-
-
-body { 
+/*body { 
   background: url(img/background2@2x.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -36,7 +30,7 @@ body {
 
 #bg-back {
 	position: absolute;
-    background-color: #000000;
+    background-color: #1b1b1b;
     top: 0;
     left: 0;
     width: 100%;
